feat: add feature to update tasks

--- a/src/index.css
+++ b/src/index.css
@@ -342,5 +342,5 @@
 }
 
 .tiptap.ProseMirror-focused {
-  @apply p-1;
+  @apply p-1 max-h-[500px] overflow-y-auto mx-1 outline-1 rounded-md outline-fg-tertiary/60 scroll-p-32 no-scrollbar;
 }
